--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,9 +47,9 @@
         <div id="content" class="main_content">
             <section class="hero" id="hero">
                 <div class="hero-left" id="hero__left">
-                    <h2>Clipele devin amintiri!</h2>
+                    <h2>Descopera evenimentele Timisoarei</h2>
                     <button class="cta-button" id="call__to__action__hero">
-                        <a href="#events">Găsește-mi un eveniment</a>
+                        <a>Găsește-mi un eveniment</a>
                     </button>
                 </div>
                 <div class="hero-right" id="hero__right">
