--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -29,7 +29,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 35px 60px;
+    padding: 0px 40px;
     margin: 30px 0;
     background-color: #141414;
     overflow: hidden;
@@ -103,19 +103,23 @@ header{
     justify-content: flex-start;
     align-items: flex-start;
     color: #ffd903;
-    padding: 20px;
+    padding: 10px;
     max-width: 35%;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .hero-left h2 {
-    font-size: 5rem;
+    font-size: 2.5rem;
     font-weight: 70;
     margin-bottom: 20px;
     letter-spacing: 1px;
     font-family: 'Gagalin', sans-serif; 
-    transform: rotate(-20deg) translateY(-70%);            
+    transform: rotate(-20deg) translateY(-50%);            
     transform-origin: center;  
-    line-height: 0.85;  
+    line-height: 0.85;
+    max-width: 90%;
+    text-align: left;
 }
 
 .cta-button {
@@ -178,7 +182,7 @@ body, h1, p {
     display: block;
     width: 100%;
     margin-left: 65px;
-    padding: 0 20px; /* Adds some padding on smaller screens */
+    padding: 0 0px;
     box-sizing: border-box; /* Includes padding in the width calculation */
 }
 
