index design improvements

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,10 +47,15 @@
         <div id="content" class="main_content">
             <section class="hero" id="hero">
                 <div class="hero-left" id="hero__left">
-                    <h2>Descopera evenimentele Timisoarei</h2>
-                    <button class="cta-button" id="call__to__action__hero">
-                        <a>Găsește-mi un eveniment</a>
-                    </button>
+                    <h2>Descoperă evenimentele Timișoarei</h2>
+                    <div class="cta-buttons">
+                        <button class="cta-button" id="call__to__action__hero">
+                            <a>Găsește-mi un eveniment</a>
+                        </button>
+                        <button class="cta-button" id="call__to__action__hero">
+                            <a href="/post_event">Postează-ți evenimentul!</a>
+                        </button>
+                    </div>
                 </div>
                 <div class="hero-right" id="hero__right">
                     <div class="image-container">
@@ -82,9 +87,9 @@
         </div> 
     </main>
     <div id="feedback-widget" class="feedback-closed">
-        <div id="feedback-toggle">Have feedback?</div>
+        <div id="feedback-toggle">Ai feedback pentru noi?</div>
         <div id="feedback-form">
-          <textarea id="feedback-text" placeholder="Your feedback here..."></textarea>
+          <textarea id="feedback-text" placeholder="Scrie aici..."></textarea>
           <button id="feedback-submit">Submit</button>
         </div>
       </div>
