--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -12,6 +12,10 @@
     box-sizing: border-box;
 }
 
+* {
+    outline: 1px solid red;
+}
+
 header{
     position: -webkit-sticky; /* For Safari */
     position: sticky;
@@ -29,30 +33,15 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 40px;
-    margin: 30px 0;
+    padding: 0px 0.5rem;
+    margin: 1rem 0;
     background-color: #141414;
     overflow: hidden;
-    max-height: 40%;
-}
-
-.cta-button {
-    background-color: #ffd903;
-    color: #141414;
-    padding: 12px 24px;
-    border: none;
-    border-radius: 5px;
-    font-size: 1rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    text-decoration: none;
-    display: inline-block;
+    max-height: 55%;
 }
 
 .cta-button:hover {
-    background-color: #e6c300;
+    background-color: #6b5b00;
 }
 
 .hero-right {
@@ -60,7 +49,7 @@ header{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
-    max-width: 65%;
+    max-width: 55%;
 }
 
 .image-container {
@@ -103,29 +92,35 @@ header{
     justify-content: flex-start;
     align-items: flex-start;
     color: #ffd903;
-    padding: 10px;
-    max-width: 35%;
+    max-width: 45%;
     word-wrap: break-word;
     overflow-wrap: break-word;
 }
 
 .hero-left h2 {
-    font-size: 2.5rem;
+    font-size: 2.1rem;
     font-weight: 70;
-    margin-bottom: 20px;
     letter-spacing: 1px;
     font-family: 'Gagalin', sans-serif; 
-    transform: rotate(-20deg) translateY(-50%);            
+    transform: rotate(-12deg) translateY(-45%);            
     transform-origin: center;  
     line-height: 0.85;
     max-width: 90%;
     text-align: left;
+    max-height:100%
+}
+
+.cta-buttons {
+    margin-top: 7rem;
+    margin-bottom: 0;
+    width: 100%;
+    align-items: center;
 }
 
 .cta-button {
     background-color: #ffd903;
     color: #141414;
-    padding: 10px 20px;
+    padding: 0.25rem 15px;
     border: none;
     border-radius: 5px;
     font-size: 1rem;
@@ -133,6 +128,7 @@ header{
     text-transform: uppercase;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin: 0.3rem 0;
 }
 
 .cta-button a {
@@ -141,7 +137,7 @@ header{
 }
 
 .cta-button:hover {
-    background-color: #e6c300;
+    background-color: #967f00;
 }
 
 .hero-right img {
@@ -253,7 +249,7 @@ body, h1, p {
 /* feedback widget */
 #feedback-widget {
     position: fixed;
-    bottom: 20px;
+    bottom: 0.5rem;
     right: 20px;
     width: 300px;
     background-color: #ffd903;
@@ -274,6 +270,7 @@ body, h1, p {
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 8px 8px 0 0;
+    text-align: center;
   }
   
   #feedback-form {
