--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -92,7 +92,7 @@
           <textarea id="feedback-text" placeholder="Scrie aici..."></textarea>
           <button id="feedback-submit">Submit</button>
         </div>
-      </div>
+    </div>
     <footer>
         <nav>
         <p>&copy; 2024 Eventer. All rights reserved.</p>
@@ -101,8 +101,9 @@
         <a href="#">Contact Us</a>
         </nav>
     </footer>
-    <script src="../static/js/scripts.js"></script>
+    <script src="../static/js/index.js"></script>
     <script src="../static/js/navbar.js"></script>
     <script src="../static/js/scroll_down.js"></script>
+    <script src="../static/js/feedback.js"></script>
 </body>
 </html>
