event deletion without page refresh + index hero section fix

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -37,7 +37,7 @@ header{
     margin: 1rem 0;
     background-color: #141414;
     overflow: hidden;
-    max-height: 55%;
+    max-height: 26rem;
 }
 
 .cta-button:hover {
