--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -54,7 +54,7 @@
                         <p>{{ email }}</p>
                     </div>
                 </div>
-                <button class="btn" onclick="editProfile()">Edit Profile</button>
+                <!-- TODO in the future <button class="btn" onclick="editProfile()">Edit Profile</button> -->
                 <button class="btn" onclick="showLogoutConfirmation()">Log Out</button>
             </div>
         
@@ -101,11 +101,11 @@
     </main>
     <footer>
         <nav>
-        <p>&copy; 2024 Eventer. All rights reserved.</p>
-        <a href="#">Privacy Policy</a> | 
+        <p>&copy; 2024 Eventer. <!--All rights reserved.--></p>
+        <!--<a href="#">Privacy Policy</a> | 
         <a href="#">Terms of Service</a> | 
         <a href="#">Contact Us</a>
-        </nav>
+        </nav>-->
     </footer>
 
     <script src="../static/js/account.js"></script>
