--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -128,11 +128,11 @@
     </section>
     <footer>
         <nav>
-        <p>&copy; 2024 Eventer. All rights reserved.</p>
-        <a href="#">Privacy Policy</a> | 
+        <p>&copy; 2024 Eventer. <!--All rights reserved.--></p>
+        <!--<a href="#">Privacy Policy</a> | 
         <a href="#">Terms of Service</a> | 
         <a href="#">Contact Us</a>
-        </nav>
+        </nav>-->
     </footer>
     <script src="../static/js/navbar.js"></script>
     <script src="../static/js/contact.js"></script>
