--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -95,11 +95,11 @@
     </div>
     <footer>
         <nav>
-        <p>&copy; 2024 Eventer. All rights reserved.</p>
-        <a href="#">Privacy Policy</a> | 
+        <p>&copy; 2024 Eventer. <!--All rights reserved.--></p>
+        <!--<a href="#">Privacy Policy</a> | 
         <a href="#">Terms of Service</a> | 
         <a href="#">Contact Us</a>
-        </nav>
+        </nav>-->
     </footer>
     <script src="../static/js/index.js"></script>
     <script src="../static/js/navbar.js"></script>
