--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,9 +48,9 @@
             <section class="hero" id="hero">
                 <div class="hero-left" id="hero__left">
                     <h2>Descoperă evenimentele Timișoarei</h2>
-                    <div class="cta-buttons">
+                    <div class="cta-buttons-container">
                         <button class="cta-button" id="call__to__action__hero">
-                            <a>Găsește-mi un eveniment</a>
+                            <a>Găsește un eveniment</a>
                         </button>
                         <button class="cta-button" id="call__to__action__hero">
                             <a href="/post_event">Postează-ți evenimentul!</a>
