--- a/app/templates/post_event.html
+++ b/app/templates/post_event.html
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label for="title">Titlul</label>
-                <input type="text" id="title" name="title" required placeholder="Enter your event's captivating title">
+                <input type="text" id="title" name="title" required placeholder="Un titlu captivant pentru evenimentul tau">
             </div>
             <div class="form-group">
                 <label for="event-date">Data</label>
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label for="description">Descrierea</label>
-                <textarea id="description" name="description" rows="4" required placeholder="Describe your amazing event in vivid detail"></textarea>
+                <textarea id="description" name="description" rows="4" required placeholder="Descrie-ți evenimentul în detaliu"></textarea>
             </div>
             <div class="form-group">
                 <label for="location">Locația</label>
@@ -45,7 +45,7 @@
                         <option value="">Selectează orașul</option>
                         <option value="Timișoara">Timișoara</option>
                     </select>
-                    <input type="text" id="venue" name="venue" placeholder="Specific venue or address">
+                    <input type="text" id="venue" name="venue" placeholder="Adresa/locația unde o să aibă loc evenimentul">
                 </div>
             </div>
             <div class="form-group">
