--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -12,6 +12,10 @@
     box-sizing: border-box;
 }
 
+* {
+    border: 1px solid red;
+}
+
 
 header{
     position: -webkit-sticky; /* For Safari */
@@ -298,3 +302,49 @@ body, h1, p {
   #feedback-submit:hover {
     background-color: #14141489;
   }
+
+@media(max-width: 768px) {
+    .hero {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0px 0.5rem;
+        margin: 0 0;
+        background-color: #141414;
+        overflow: hidden;
+        max-height: 26rem;
+    }
+
+    .cta-buttons-container {
+        margin-top: 3.8rem;
+        margin-bottom: 0;
+        width: 100%;
+        display: flex;               
+        justify-content: center;      /* Centers the buttons horizontally */
+        gap: 20px; 
+    }
+
+    .cta-button {
+        background-color: #ffd903;
+        color: #141414;
+        padding: 0.1rem 0.3rem;
+        border: none;
+        border-radius: 5px;
+        font-size: 0.75rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        margin: 0.3rem 0.2rem;
+    }
+    
+    /* doesn't yet display on mobile devices
+    .hero-right {
+        display: none;
+    }
+    */
+
+    .hero-left h2 {
+        transform: rotate(-12deg) translateY(65%); 
+    }
+}
