--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,10 +49,10 @@
                 <div class="hero-left" id="hero__left">
                     <h2>Descoperă evenimentele Timișoarei</h2>
                     <div class="cta-buttons-container">
-                        <button class="cta-button" id="call__to__action__hero">
+                        <button class="cta-button">
                             <a>Găsește un eveniment</a>
                         </button>
-                        <button class="cta-button" id="call__to__action__hero">
+                        <button class="cta-button">
                             <a href="/post_event">Postează-ți evenimentul!</a>
                         </button>
                     </div>
