responsive design from fullHD (1920px) to 900px for the home page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,9 +45,9 @@
             </a>
         </sidenav>
         <div id="content" class="main_content">
-            <section class="hero" id="hero">
+            <section class="hero desktop-version" id="hero">
                 <div class="hero-left" id="hero__left">
-                    <h2>Descoperă evenimentele Timișoarei</h2>
+                    <h2>Descoperă evenimentele Timișoarei!</h2>
                     <div class="cta-buttons-container">
                         <button class="cta-button">
                             <a>Găsește un eveniment</a>
@@ -58,6 +58,33 @@
                     </div>
                 </div>
                 <div class="hero-right" id="hero__right">
+                    <div class="image-container">
+                        <img src="../static/images/hero.jpg" alt="Event Image 1">
+                    </div>
+                    <div class="image-container">
+                        <img src="../static/images/hero2.jpg" alt="Event Image 2">
+                    </div>
+                    <div class="image-container">
+                        <img src="../static/images/hero3.jpg" alt="Event Image 3">
+                    </div>
+                    <div class="image-container">
+                        <img src="../static/images/hero4.jpg" alt="Event Image 4">
+                    </div>
+                </div>
+            </section>
+            <section class="hero mobile-version" id="hero_mobile">
+                <div class="hero-left" id="hero__left_mobile">
+                    <h2>Descoperă evenimentele Timișoarei!</h2>
+                    <div class="cta-buttons-container">
+                        <button class="cta-button">
+                            <a>Găsește un eveniment</a>
+                        </button>
+                        <button class="cta-button">
+                            <a href="/post_event">Postează-ți evenimentul!</a>
+                        </button>
+                    </div>
+                </div>
+                <div class="hero-right" id="hero__right_mobile">
                     <div class="image-container">
                         <img src="../static/images/hero.jpg" alt="Event Image 1">
                     </div>
