--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -98,10 +98,10 @@ header{
     font-weight: 70;
     letter-spacing: 1px;
     font-family: 'Gagalin', sans-serif; 
-    transform: rotate(-12deg) translateY(-45%);            
+    transform: rotate(-12deg) translateY(-15%) translateX(15%);            
     transform-origin: center;  
     line-height: 0.85;
-    max-width: 90%;
+    max-width: 80%;
     text-align: center;
     max-height:100%
 }
@@ -190,6 +190,7 @@ body, h1, p {
     grid-template-columns: repeat(4, minmax(180px, 1fr));
     gap: 2%;
     margin-top: 5%;
+    margin-right: 1% ;
 }
 
 .event-card {
@@ -298,54 +299,102 @@ body, h1, p {
     background-color: #14141489;
   }
 
-@media(max-width: 768px) {
-    * {
-        border: 1px solid red;
+.mobile-version {
+    display: none;
+}
+
+
+.hero.mobile-version {
+    display: none;
+}
+
+@media(max-width: 1000px) {
+
+    .hero.desktop-version {
+        display: none;
     }
 
-    .hero {
+    .desktop-version {
+        display: none;
+    }
+
+    .hero.mobile-version {
+        display: block;
+        flex-wrap: nowrap;
         display: flex;
+        justify-content: space-between;
         align-items: center;
         justify-content: space-between;
-        padding: 0px 0.5rem;
+        padding: 0px 0.1rem;
         margin: 0 0;
         background-color: #141414;
         overflow: hidden;
         max-height: 26rem;
+        position: relative;
+    }
+
+    #events {
+        margin-left: 5%;
+        margin-right: 5%;
     }
 
     .cta-buttons-container {
-        margin-top: 3.8rem;
+        margin-top: 2rem;
         margin-bottom: 0;
         width: 100%;
         display: flex;               
         justify-content: center;      /* Centers the buttons horizontally */
-        align-items: center;
-        gap: 20px; 
+        gap: 20px;                    /* Adds spacing between the buttons */
+    }
+
+    .hero-left {
+        position: relative;
+        margin-left: 5%;
+        min-width: 0;
+        max-width: 45%;
+    }
+
+    .hero-left h2 {
+        font-size: 2rem;
+        font-weight: 70;
+        letter-spacing: 1px;
+        font-family: 'Gagalin', sans-serif; 
+        transform: rotate(-12deg) translateY(7%) translateX(12%);            
+        transform-origin: center; 
+        line-height: 0.85;
+        max-width: 80%;
+        text-align: center;
+        max-height:100%
     }
 
     .cta-button {
         background-color: #ffd903;
         color: #141414;
-        padding: 0.1rem 0.3rem;
+        padding: 0.4rem 0.8rem;
         border: none;
         border-radius: 5px;
-        font-size: 0.75rem;
+        font-size: 0.9rem;
         font-weight: 600;
         text-transform: uppercase;
         cursor: pointer;
         transition: background-color 0.3s ease;
-        margin: 0.3rem 0.2rem;
-        min-height: 1.6rem;
+        margin: 0.25rem 0.15rem;
+    }
+
+    .hero-right {
+        position: relative;
+        flex: 1;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 20px;
+        max-width: 55%;
+        min-width: 0;
     }
     
-    /* doesn't yet display on mobile devices
-    .hero-right {
-        display: none;
-    }
-    */
-
-    .hero-left h2 {
-        transform: rotate(-12deg) translateY(65%); 
+    .image-container {
+        position: relative;
+        overflow: hidden;
+        border-radius: 15px;
+        aspect-ratio: 1;
     }
 }
