--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -91,7 +91,7 @@
                         <p clasx`s="event-date">Date: {{ event[4] }} </p>
                         <p class="event-location">{{ event[5] }}</p>
                         <div class="event-actions">
-                            <button class="edit-event" data-id="{{ event[0] }}">Edit</button>
+                            <!--<button class="edit-event" data-id="{{ event[0] }}">Edit</button>-->
                             <button class="remove-event" data-id="{{ event[0] }}">Remove</button>
                         </div>
                     </article>
