--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -464,5 +464,82 @@ body, h1, p {
 }
 
 @media(max-width: 524px) {
+    .cta-buttons-container {
+        margin-top: 3rem;
+        margin-bottom: 0;
+        width: 100%;
+        display: flex;               
+        justify-content: center;      /* Centers the buttons horizontally */
+        gap: 20px;                    /* Adds spacing between the buttons */
+    }
     
+    .cta-button {
+        background-color: #ffd903;
+        color: #141414;
+        padding: 0.45rem 0.5rem;
+        border: none;
+        border-radius: 5px;
+        font-size: 0.9rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        margin: 0.3rem 0.2rem;
+    }
+}
+
+@media(max-width: 509px){
+    .cta-buttons-container {
+        margin-top: 3rem;
+        margin-bottom: 0;
+        width: 100%;
+        display: flex;               
+        justify-content: center;      /* Centers the buttons horizontally */
+        gap: 20px;                    /* Adds spacing between the buttons */
+    }
+    
+    .cta-button {
+        background-color: #ffd903;
+        color: #141414;
+        padding: 0.55rem 0.5rem;
+        border: none;
+        border-radius: 5px;
+        font-size: 0.87rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        margin: 0.3rem 0.2rem;
+    }
+}
+
+@media(max-width: 420px){
+
+    .cta-buttons-container {
+        margin-top: 3rem;
+        margin-bottom: 0;
+        width: 100%;
+        display: flex;               
+        justify-content: center;      /* Centers the buttons horizontally */
+        gap: 5px;                    /* Adds spacing between the buttons */
+    }
+
+    #events {
+        display: grid;
+        place-items: left;
+        grid-template-columns: repeat(2, minmax(180px, 1fr));
+        gap: 0.5%;
+        margin-top: 5%;
+        margin-right: 1% ;
+    }
+
+    
+    .main_content {
+        display: block;
+        width: 100%;
+        margin-left: 0px;
+        padding: 0 0px;
+        box-sizing: border-box; /* Includes padding in the width calculation */
+        margin: 0;
+    }
 }
