--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -50,7 +50,7 @@
                     <h2>Descoperă evenimentele Timișoarei!</h2>
                     <div class="cta-buttons-container">
                         <button class="cta-button">
-                            <a>Găsește un eveniment</a>
+                            <a href="/events">Găsește un eveniment</a>
                         </button>
                         <button class="cta-button">
                             <a href="/post_event">Postează-ți evenimentul!</a>
